# CoBRA-Challenge

./: README.md  package.xml  setup.cfg
cobrapid_pi/: apriltag_node.py  camera_tag_pose_broadcaster.py
src/cobrapid_pi/: setup.py
src/cobrapid_pi/cobrapid_pi/: control.py
src/cobrapid_pi/config/: tags_36h11.yaml
src/cobrapid_pi/launch/: cobrapid_pi.launch.py
src/cobrapid_pi/resource/: robot_description.urdf
