<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobrapid_pi</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="PIDteam@todo.todo">PIDteam</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>dt_apriltags</exec_depend>
  <exec_depend>picamera2</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>smbus</exec_depend>
  <exec_depend>smbus2</exec_depend>
  <exec_depend>pygame</exec_depend>
  <exec_depend>pyPS4Controller</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>gpiozero</exec_depend>
  <exec_depend>csv</exec_depend>
  <exec_depend>datetime</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
